# SOLID-Principles-RPG-Example

./: CMakeLists.txt  README.md
SOLID_Exemple/: CMakeLists.txt
SOLID_Exemple/include/solid_exemple_lib/: reflect.h  requirement.h  save_manager.h  world.h
SOLID_Exemple/include/solid_exemple_lib/attributes/: agility.h  attribute.h  crafting.h  intelligence.h  strenght.h
SOLID_Exemple/include/solid_exemple_lib/characters/: character.h  entity_stats.h
SOLID_Exemple/include/solid_exemple_lib/characters/npcs/: npc_abilities.h  npc_types.h
SOLID_Exemple/include/solid_exemple_lib/factions/: faction.h
SOLID_Exemple/include/solid_exemple_lib/items/: item.h
SOLID_Exemple/src/: primitives.cpp  requirement.cpp  save_manager.cpp  world.cpp
SOLID_Exemple/src/attributes/: attribute.cpp
SOLID_Exemple/src/characters/: character.cpp  entity_stats.cpp
SOLID_Exemple/src/characters/npcs/: npc_types.cpp
SOLID_Exemple/src/items/: item.cpp
builds/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
